--- a/app.wxss
+++ b/app.wxss
@@ -1,11 +1,7 @@
 /**app.wxss**/
-.container {
-  
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
+page,view, text,swiper-item,swiper,image,navigator{
+ padding: 0;
+ margin: 0;
+ box-sizing: border-box;
+ 
 } 
