--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,9 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view>
+ <!-- <text wx:if="{{userInfo.data.isLogin}}">登录</text>
+ <text wx:elif="{{!userInfo.data.isLogin}}" class="title">您还未登录哦</text> -->
+ <Header />
+ <Content blogData="{{blogData}}" />
+  <view wx:if="{{loading}}" class="loading"> <van-loading type="spinner" color="#27A899" /></view>
+  <bottom-notice notice="{{notice}}" />
 </view>
