--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,10 @@
-/**index.wxss**/
-.userinfo {
+@import '../../app.wxss';
+view{
+  color: var(--themeColor);
+}
+.loading{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  padding: 20px 0;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
-}
