--- a/components/header/header.wxml
+++ b/components/header/header.wxml
@@ -3,7 +3,7 @@
   <view class="title">LET'S SHARE</view>
   <view class="text">精品博客汇聚</view>
   <view class="buttonWrapper">
-    <button class="button">立即登录</button>
-    <button class="button">立即注册</button>
+    <button class="button" bindtap="toLogin">立即登录</button>
+    <button class="button" bindtap="toRegister">立即注册</button>
   </view>
 </view>
