--- a/pages/register/index.wxml
+++ b/pages/register/index.wxml
@@ -1,2 +1,29 @@
 <!--pages/register/index.wxml-->
-<text>pages/register/index.wxml</text>
+
+<view class="registerPage">
+  <van-notify id="van-notify" />
+  <view class="registerForm">
+    <view class="username">
+      <text class="text">用户名</text>
+      <input bindinput="getUserName" type="text" placeholder="用户名"  />
+    </view>
+    <view class="password">
+      <text class="text">密码</text>
+      <input bindinput="getPassWord" type="password" placeholder="密码"/>
+    </view>
+    <view class="password">
+      <text class="text">确认密码</text>
+      <input bindinput="getPassWordAgain" type="password" placeholder="请再输入一次密码"/>
+    </view>
+    
+    <button bindtap="checkUserInput">
+      <text wx:if="{{!loading}}">立即注册</text>
+      <van-loading wx:else type="spinner" color="white" />
+    </button>
+    <navigator class="navigator" url="/pages/login/index" hover-class="none">
+      已有账号?<text class="text">立即登录</text>
+    </navigator>
+    <slider></slider>
+  </view>
+</view>
+
