添加user页面/完善登录与未登录呈现不同内容

--- a/components/header/header.wxml
+++ b/components/header/header.wxml
@@ -1,6 +1,6 @@
 <!--components/header.wxml-->
 <view class="head">
-  <view class="notLoggedIn" wx:if="{{userInfo && !userInfo.data.isLogin}}">
+  <view class="notLoggedIn" wx:if="{{!userInfo.data.isLogin}}">
     <view class="title">LET'S SHARE</view>
     <view class="text">精品博客汇聚</view>
     <view class="buttonWrapper">
@@ -9,10 +9,11 @@
     </view>
   </view>
   <view wx:else class="logged">
-    <text class="title-logged">LET'S SHARE</text>
-    <view>
-      <image class="create"  mode="widthFix"  src="../../icon/create.png"  alt="avatar"></image>
-      <image class="img" mode="widthFix" src="../../icon/create.png" alt="avatar"></image>
+    <view class="logged-left"> 
+      <text class="title-logged">LET'S SHARE</text>
+      <image class="create" bindtap="toCreate" mode="widthFix"  src="../../icon/create.png"  alt="avatar"></image>
     </view>
+    <image bindtap="toUser" class="avatar" mode="widthFix" src="{{wxUserInfo.detail.userInfo.avatarUrl}}"  alt="avatar"></image>
+   
   </view>
 </view>
