--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,6 @@
 <!--index.wxml-->
 <view>
- <!-- <text wx:if="{{userInfo.data.isLogin}}">登录</text>
- <text wx:elif="{{!userInfo.data.isLogin}}" class="title">您还未登录哦</text> -->
- <Header />
-
+ <Header userInfo="{{userInfo}}" wxUserInfo="{{wxUserInfo}}" />
  <Content blogData="{{blogData}}" />
   <view wx:if="{{loading}}" class="loading"> <van-loading type="spinner" color="#27A899" /></view>
   <bottom-notice notice="{{notice}}" />
