--- a/pages/login/index.wxml
+++ b/pages/login/index.wxml
@@ -11,7 +11,7 @@
       <input bindinput="getPassWord" type="password" placeholder="密码"/>
     </view>
     
-    <button bindtap="checkUserInput">
+    <button open-type="getUserInfo" bindgetuserinfo="checkUserInput">
       <text wx:if="{{!loading}}">立即登录</text>
       <van-loading wx:else type="spinner" color="white" />
     </button>
