--- a/pages/register/index.wxml
+++ b/pages/register/index.wxml
@@ -16,7 +16,7 @@
       <input bindinput="getPassWordAgain" type="password" placeholder="请再输入一次密码"/>
     </view>
     
-    <button bindtap="checkUserInput">
+    <button  open-type="getUserInfo" bindgetuserinfo="checkUserInput">
       <text wx:if="{{!loading}}">立即注册</text>
       <van-loading wx:else type="spinner" color="white" />
     </button>
