--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -1,5 +1,33 @@
 <!--pages/user/index.wxml-->
 <view>
-  <text>pages/user/index.wxml</text>
-  <button open-type="getPhoneNumber" bindgetuserinfo="getPhoneNumber">ffff</button>
+  <view wx:if="{{userInfo.data.isLogin}}" class="logined">
+    <view class="items">
+      <userInfo-item>
+        <text slot="title">头像</text>
+        <image slot="value" mode="widthFix" style="width:48px" src="{{wxUserInfo.detail.userInfo.avatarUrl}}"  alt="avatar"></image>
+      </userInfo-item>
+      <userInfo-item>
+        <text slot="title">昵称</text>
+        <text slot="value">{{wxUserInfo.detail.userInfo.nickName}}</text>
+      </userInfo-item>
+      <userInfo-item>
+        <text slot="title">性别</text>
+        <text slot="value">{{wxUserInfo.detail.userInfo.gender === 1 ? "男":"女"}}</text>
+      </userInfo-item>
+      <userInfo-item>
+        <text slot="title">全部文章</text>
+        <text slot="value">{{10}}篇</text>
+      </userInfo-item>
+    </view>
+    <my-button bindtap="logout">注销登录</my-button>
+  </view>
+  <view wx:else>
+    <van-popup
+      show="{{ show}}"
+      closeable
+      position="top"
+      custom-style="{{popipStyle}}"
+      bind:close="onClose"
+    >小可爱你还没登录哦</van-popup>
+  </view>
 </view>
