--- a/components/content/content.wxss
+++ b/components/content/content.wxss
@@ -31,6 +31,8 @@
 }
 .contentHead{
   padding-top: 8px;
+  display: flex;
+  align-items: flex-end;
 }
 .title{
   max-width: 7em;
@@ -46,6 +48,7 @@
 .dateBack{
   font-size:12px;
   padding-left:10px;
+  color: #27A899;
 }
 .text{
   max-width: 23em;
