--- a/pages/userBlogs/userBlogs.wxml
+++ b/pages/userBlogs/userBlogs.wxml
@@ -1,2 +1,20 @@
 <!--pages/userBlogs/userBlogs.wxml-->
-<text>pages/userBlogs/userBlogs.wxml</text>
+<view class="wrapper" wx:for="{{blogData && blogData.data.data}}" wx:for-item="item" wx:for-index="index" wx:key="index">
+    <view class="article">
+      <view class="avatar">
+        <image class="img" mode="widthFix" src="{{wxUserInfo.detail.userInfo.avatarUrl}}" alt="avatar"></image>
+        <text class="author">{{wxUserInfo.detail.userInfo.nickName}}</text>
+      </view>
+      <view class="content">
+        <view class="contentHead">
+          <text class="title">{{item.title}}</text>
+          <text class="dateBack">{{item.createdAt}}</text>
+        </view>
+        <text class="text">{{item.description===""?"该用户没有填写内容":item.description}}</text>
+      </view>
+    </view>
+    <view class="actions">
+      <text class="action" bindtap="edit">編輯</text>
+      <text class="action" bindtap="remove">刪除</text>
+    </view>
+</view>
