--- a/pages/userBlogs/userBlogs.wxss
+++ b/pages/userBlogs/userBlogs.wxss
@@ -1,1 +1,77 @@
 /* pages/userBlogs/userBlogs.wxss */
+.wrapper{
+  display: flex;
+  
+}
+.article{
+  display: flex;
+  padding: 10px 0;
+  flex-grow: 1;
+}
+.avatar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+}
+.img{
+  border-radius: 50%;
+  width:48px
+}
+.author{
+  padding-top:6px;
+  color: #27A899;
+  max-width: 3.5em;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap; 
+  font-size:12px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.contentHead{
+  padding-top: 8px;
+  
+  display: flex;
+  align-items: flex-end;
+}
+.title{
+  max-width: 7em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  font-size:18px;
+  font-size:16px;
+  font-weight:700; 
+}
+.dateBack{
+  font-size:12px;
+  padding-left:10px;
+}
+.text{
+  max-width: 23em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size:12px;
+}
+.actions{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: green;
+}
+.action{
+ 
+  padding:8px 16px;
+}
