--- a/components/header/header.wxss
+++ b/components/header/header.wxss
@@ -56,9 +56,18 @@
   border-radius: 50%;
   margin-right: 10px;
 }
-.create{
+.createIcon{
   width: 32px;
+}
+.create{
   margin-left:10px ;
+  display: flex;
+  align-items: flex-end;
+
+}
+.createText{
+  color: rgba(255, 255, 255, 0.7);
+  margin-bottom: 2px;
 }
 
 
