--- a/pages/createBlog/index.wxml
+++ b/pages/createBlog/index.wxml
@@ -7,11 +7,11 @@
   </view>
   <view class="section">
     <text class="description">内容简介</text>
-    <textarea class="descriptionInput" value="{{newBlog.description}}" bindblur="changeDescription"  auto-height placeholder="限30个字哦" />
+    <textarea class="descriptionInput" value="{{newBlog.description}}" bindinput="changeDescription"  auto-height placeholder="限30个字哦" />
   </view>
   <view class="section">
     <text class="content">文章内容</text>
-    <textarea class="contentInput" value="{{newBlog.content}}" bindblur="changeContent" auto-height />
+    <textarea class="contentInput" value="{{newBlog.content}}" bindinput="changeContent" auto-height />
   </view>
   <view class="section switchWrapper">
     <text>是否展示到首页</text>
