--- a/pages/detail/index.wxss
+++ b/pages/detail/index.wxss
@@ -1,1 +1,60 @@
 /* pages/detail/index.wxss */
+.articleWarpper{
+  padding: 10px 16px;
+}
+
+.articleHead{
+  display: flex;
+  justify-content: center;
+}
+.avatar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.img{
+  border-radius: 50%;
+  width:48px
+}
+.author{
+  padding-top:6px;
+  color: #27A899;
+  font-size:12px;
+}
+
+.title{
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 16px;
+  justify-content: center;
+}
+.contentHead{
+  padding-top: 8px;
+  display: flex;
+  align-items: flex-end;
+  
+}
+.titleText{
+  max-width: 17em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  font-size:24px;
+  font-weight:700; 
+ 
+}
+.dateBack{
+  display: flex;
+  font-size:12px;
+  color: #27A899;
+  margin-bottom: 4px;
+  
+}
+
+.description{
+  font-size:14px;
+  margin-bottom: 14px;
+}
