--- a/pages/userBlogs/userBlogs.wxml
+++ b/pages/userBlogs/userBlogs.wxml
@@ -11,7 +11,7 @@
           <text class="title">{{item.title}}</text>
           <text class="dateBack">{{item.createdAt}}</text>
         </view>
-        <text class="text">{{item.description===""?"该用户没有填写内容":item.description}}</text>
+        <text class="text">{{item.description===""?"该用户没有填写描述":item.description}}</text>
       </view>
     </view>
     <view class="actions">
