--- a/pages/userBlogs/userBlogs.wxss
+++ b/pages/userBlogs/userBlogs.wxss
@@ -36,7 +36,6 @@
 }
 .contentHead{
   padding-top: 8px;
-  
   display: flex;
   align-items: flex-end;
 }
@@ -48,12 +47,12 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   font-size:18px;
-  font-size:16px;
   font-weight:700; 
 }
 .dateBack{
   font-size:12px;
   padding-left:10px;
+  color: #27A899;
 }
 .text{
   max-width: 23em;
@@ -63,6 +62,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   font-size:12px;
+
 }
 .actions{
   
@@ -77,7 +77,4 @@
 }
 .notData{
   padding: 0 10px;
-}
-.text{
-  text-align: center;
 }
